kubernetes/downloads/sabnzbd/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: downloads
spec:
parentRefs:
  - name: internal
    namespace: network
  hostnames:
    - "sabnzbd.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sabnzbd
          port: 8080
